--- a/.gitignore
+++ b/.gitignore
@@ -21,12 +21,12 @@ mono_crash.*
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
-x86/
-Debug_x64/
-Debug_x86/
-Release_x64/
-Release_x86/
+**/x64/
+**/x86/
+**/Debug_x64/
+**/Debug_x86/
+**/Release_x64/
+**/Release_x86/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
